Step 7 - JSON Model -  O 'M' do MVC

--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -5,4 +5,9 @@
     <Button 
         text="Diga Salve"
         press=".onShowHello"></Button>
+    <Input 
+        value="{/recipient/name}"
+        description="Salve {/recipient/name}"
+        valueLiveUpdate="true"
+        width="60%"></Input>
 </mvc:View>
