--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -3,7 +3,7 @@
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc">
     <Button 
-        text="Diga Salve"
+        text="{i18n>showHelloButtonText}"
         press=".onShowHello"></Button>
     <Input 
         value="{/recipient/name}"
