--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,13 +1,27 @@
 <mvc:View
     controllerName="ui5.tutorial.controller.App"
     xmlns="sap.m"
-    xmlns:mvc="sap.ui.core.mvc">
-    <Button 
-        text="{i18n>showHelloButtonText}"
-        press=".onShowHello"></Button>
-    <Input 
-        value="{/recipient/name}"
-        description="Salve {/recipient/name}"
-        valueLiveUpdate="true"
-        width="60%"></Input>
+    xmlns:mvc="sap.ui.core.mvc"
+    displayBlock="true">
+    <App>
+        <pages>
+            <Page title="{i18n>homePageTitle}">
+                <content>
+                    <Panel
+                        headerText="{i18n>helloPanelTitle}">
+                        <content>
+                            <Button
+                                text="{i18n>showHelloButtonText}"
+                                press=".onShowHello"></Button>
+                            <Input
+                                value="{/recipient/name}"
+                                description="Salve {/recipient/name}"
+                                valueLiveUpdate="true"
+                                width="60%"></Input>
+                        </content>
+                    </Panel>
+                </content>
+            </Page>
+        </pages>
+    </App>
 </mvc:View>
