--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -8,25 +8,8 @@
             <pages>
                 <Page title="{i18n>homePageTitle}">
                     <content>
-                        <Panel
-                            headerText="{i18n>helloPanelTitle}"
-                            class="sapUiResponsiveMargin"
-                            width="auto">
-                            <content>
-                                <Button
-                                    text="{i18n>showHelloButtonText}"
-                                    press=".onShowHello"
-                                    class="sapUiSmmallMarginEnd"></Button>
-                                <Input
-                                    value="{/recipient/name}"
-                                    description="Salve {/recipient/name}"
-                                    valueLiveUpdate="true"
-                                    width="60%"></Input>
-                                <Text 
-                                    text="Olá {/recipient/name}"
-                                    class="sapUiSmallMargin"></Text>
-                            </content>
-                        </Panel>
+                        <mvc:XMLView
+                            viewName="ui5.tutorial.view.HelloPanel"></mvc:XMLView>
                     </content>
                 </Page>
             </pages>
