--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -9,7 +9,11 @@
                 <Page title="{i18n>homePageTitle}">
                     <content>
                         <mvc:XMLView
-                            viewName="ui5.tutorial.view.HelloPanel"></mvc:XMLView>
+                            viewName="ui5.tutorial.view.HelloPanel">
+                        </mvc:XMLView>
+                        <mvc:XMLView
+                            viewName="ui5.tutorial.view.InvoiceList">
+                        </mvc:XMLView>
                     </content>
                 </Page>
             </pages>
