--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -4,19 +4,7 @@
     xmlns:mvc="sap.ui.core.mvc"
     displayBlock="true">
     <Shell>
-        <App>
-            <pages>
-                <Page title="{i18n>homePageTitle}">
-                    <content>
-                        <mvc:XMLView
-                            viewName="ui5.tutorial.view.HelloPanel">
-                        </mvc:XMLView>
-                        <mvc:XMLView
-                            viewName="ui5.tutorial.view.InvoiceList">
-                        </mvc:XMLView>
-                    </content>
-                </Page>
-            </pages>
+        <App id="app">
         </App>
     </Shell>
 </mvc:View>
