--- a/webapp/view/InvoiceList.view.xml
+++ b/webapp/view/InvoiceList.view.xml
@@ -1,67 +1,54 @@
-<mvc:View
-	controllerName="ui5.tutorial.controller.InvoiceList"
-	xmlns="sap.m"
-	xmlns:core="sap.ui.core"
-	xmlns:mvc="sap.ui.core.mvc">
-	<Table
-		id="invoiceList"
-		class="sapUiResponsiveMargin"
-		width="auto"
-		items="{
+<mvc:View controllerName="ui5.tutorial.controller.InvoiceList"
+    xmlns="sap.m"
+    xmlns:core="sap.ui.core"
+    xmlns:mvc="sap.ui.core.mvc">
+    <Panel accessibleRole="Region">
+        <headerToolbar>
+            <Toolbar>
+                <Title text="{i18n>invoiceListTitle}"/>
+                <ToolbarSpacer/>
+                <SearchField width="50%" search=".onFilterInvoices"/>
+            </Toolbar>
+        </headerToolbar>
+        <Table id="invoiceList" class="sapUiResponsiveMargin" width="auto" items="{
 				path : 'invoice>/Invoices',
 				sorter : {
 					path : 'ShipperName',
 					group : true
 				}
 			}">
-		<headerToolbar>
-			<Toolbar>
-				<Title text="{i18n>invoiceListTitle}" />
-				<ToolbarSpacer />
-				<SearchField
-					width="50%"
-					search=".onFilterInvoices"/>
-			</Toolbar>
-		</headerToolbar>
-		<columns>
-			<Column
-				hAlign="End"
-				minScreenWidth="Small"
-				demandPopin="true"
-				width="5em">
-				<Text text="{i18n>columnQuantity}" />
-			</Column>
-			<Column>
-				<Text text="{i18n>columnName}" />
-			</Column>
-			<Column
-				minScreenWidth="Small"
-				demandPopin="true">
-				<Text text="{i18n>columnStatus}" />
-			</Column>
-			<Column
-				minScreenWidth="Tablet"
-				demandPopin="false">
-				<Text text="{i18n>columnSupplier}" />
-			</Column>
-			<Column hAlign="End">
-				<Text text="{i18n>columnPrice}" />
-			</Column>
-		</columns>
-		<items>
-			<ColumnListItem
-				type="Navigation"
-				press=".onPress">
-				<cells>
-					<ObjectNumber
-						number="{invoice>Quantity}"
-						emphasized="false"/>
-					<ObjectIdentifier title="{invoice>ProductName}" />
-					<Text
-						core:require="{
+            <headerToolbar>
+                <Toolbar>
+                    <Title text="{i18n>invoiceListTitle}" />
+                    <ToolbarSpacer />
+                    <SearchField width="50%" search=".onFilterInvoices"/>
+                </Toolbar>
+            </headerToolbar>
+            <columns>
+                <Column hAlign="End" minScreenWidth="Small" demandPopin="true" width="5em">
+                    <Text text="{i18n>columnQuantity}" />
+                </Column>
+                <Column>
+                    <Text text="{i18n>columnName}" />
+                </Column>
+                <Column minScreenWidth="Small" demandPopin="true">
+                    <Text text="{i18n>columnStatus}" />
+                </Column>
+                <Column minScreenWidth="Tablet" demandPopin="false">
+                    <Text text="{i18n>columnSupplier}" />
+                </Column>
+                <Column hAlign="End">
+                    <Text text="{i18n>columnPrice}" />
+                </Column>
+            </columns>
+            <items>
+                <ColumnListItem type="Navigation" press=".onPress">
+                    <cells>
+                        <ObjectNumber number="{invoice>Quantity}" emphasized="false"/>
+                        <ObjectIdentifier title="{invoice>ProductName}" />
+                        <Text core:require="{
 								Formatter: 'ui5/tutorial/model/formatter'
-						}"
-						text="{
+						}" text="{
 								parts: [
 									'invoice>Status',
 									'i18n>invoiceStatusA',
@@ -70,9 +57,8 @@
 								],
 								formatter: 'Formatter.statusText.bind($controller)'
 						}"/>
-					<Text text="{invoice>ShipperName}" />
-					<ObjectNumber
-						number="{
+                        <Text text="{invoice>ShipperName}" />
+                        <ObjectNumber number="{
 								parts: [
 									'invoice>ExtendedPrice',
 									'view>/currency'
@@ -81,11 +67,10 @@
 								formatOptions: {
 									showMeasure: false
 								}
-							}"
-						unit="{view>/currency}"
-						state="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success' }"/>
-				</cells>
-			</ColumnListItem>
-		</items>
-	</Table>
+							}" unit="{view>/currency}" state="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success' }"/>
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+    </Panel>
 </mvc:View>
